
  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement - experimental.

  o FEATURE: function to (re-)calculate probe dots around a give point
    [Joel Bard].

  o FEATURE: monomer and residue selection dipoles.

  o FEATURE: Interactive map sharpening [Randy Read, Alex Brunger]

  o FEATURE: LINK bonds are are now represented.

  o FEATURE: Baton build parameters (e.g. "backwards") now have a GUI 
    [Phil Evans] 

  o FEATURE: Move waters to surround protein [Garib Murshudov]

  o CHANGE: partial charges added to electrostatic surface calculation.

  o CHANGE: shift-click and ctrl-click in the file selectors now work
    for reading in several coordinates files [Roberto Steiner].

  o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
    Bob Nolte]

  o CHANGE: Ramachandran Plots now have molecule name labels [Wendy Offen].

  o CHANGE: The save coordinates dialogs active item is the first
    molecule with unsaved changes (rather than simply the first
    molecule) [Herb Klei]

  o CHANGE: "Go To Blob" now goes to the front blob, no matter what
    the density level of blobs/density behind it is [JED].

  o Don't display the geometry distance if the molecule corresponding
    to the start or end point is not displayed [JED].

  o BUG-FIX: TER records are removed on addition of waters [Herb Klei].

  o BUG-FIX: Single HETATMs now are refined by rigid body (as waters
    are) when using Refine Zone.

  o BUG-FIX: new atoms (and waters) are added as HETATMs if
    appropriate [David Mathog].

  o BUG-FIX: TER records for water chains are no longer tested in
    water validation tests [Herb Klei].

  o BUG-FIX: NCS chain jumping now works on heterodimers [Jianghai Zhu].

  o BUG-FIX: The Chain Reordering function in Extensions has been fixed.

-----

Release 0.5.2 Uneno

   o BUG-FIX: Fix annoying shift-key-labels-atoms bug

Release 0.5.1 Uneno
